prevented the first recipe line from being deleted which breaks the submut code.

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ h4{
  }
 .add-recipe-form{
   outline: 2px solid black;
+  padding: 10px 0px 20px 20px;
 }
 .recipe-instructions-input{
   margin: 0px 10px 10px 0px;
